--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,13 +7,33 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HomeActivity"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+        <EditText
+                  android:id="@+id/usereamil_et"
+                  android:layout_width="match_parent"
+                  android:hint="UserEmail"
+                  android:layout_height="wrap_content"/>
 
-</android.support.constraint.ConstraintLayout>
+        <EditText
+                android:id="@+id/password_et"
+                  android:layout_width="match_parent"
+                  android:hint="Password"
+                  android:inputType="textPassword"
+                  android:layout_height="wrap_content"/>
+
+        <Button
+                android:id="@+id/login_btn"
+                android:layout_width="wrap_content"
+                android:text="LogIn"
+                android:textAllCaps="false"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
