--- a/app/src/main/res/layout/activity_list_of_sites.xml
+++ b/app/src/main/res/layout/activity_list_of_sites.xml
@@ -7,13 +7,14 @@
         android:layout_height="match_parent"
         tools:context=".ListOfSitesActivity">
 
-
     <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#0000FF"
-            android:theme="?attr/actionBarTheme"
-            android:minHeight="?attr/actionBarSize" android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" android:id="@+id/toolbar2" android:layout_marginTop="0dp"
-            android:layout_marginStart="0dp"/>
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
 </RelativeLayout>
