--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,11 +4,20 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".LoginActivity">
 
-        <ImageView android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   android:src = "@drawable/logo"
-                   android:scaleType="centerInside"/>
+    <ImageView android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:src="@drawable/erde"
+               android:scaleType="fitXY" android:layout_marginTop="0dp"
+               android:layout_alignParentTop="true" android:layout_alignParentStart="true"
+               android:layout_marginStart="0dp" android:adjustViewBounds="false"/>
+    <TextView
+            android:text="WELCOME TO ARCHAEOLOGICALFIELDWORK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true" android:id="@+id/welcom" android:layout_marginTop="82dp"
+            android:textColor="@color/colorPrimary" android:textStyle="bold" android:textSize="24sp"
+            android:textAlignment="center"/>
 
 </RelativeLayout>
