--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".LoginActivity">
@@ -28,7 +27,7 @@
         <Button
                 android:id="@+id/login_btn"
                 android:layout_width="wrap_content"
-                android:text="LogIn"
+                android:text="Login"
                 android:textAllCaps="false"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"/>
