--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- "Mark Favorite", should appear as action button if possible -->
+
     <item
-            android:id="@+id/action_favorite"
-            android:icon="@drawable/emaillogo"
-            android:title="@string/app_name"
+            android:id="@+id/item_add"
+            android:icon="@android:drawable/ic_menu_add"
+            android:title="@string/menu_addSite"
             app:showAsAction="always"/>
-
-    <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/action_settings"
-          android:title="@string/settings"
-          app:showAsAction="always"/>
-
 </menu>
