modification almost done

--- a/app/src/main/res/layout/activity_site.xml
+++ b/app/src/main/res/layout/activity_site.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="org.wit.archaeologicalfieldwork.ListOfSitesActivity">
+        tools:context="org.wit.archaeologicalfieldwork.activities.SiteActivity">
 
     <RelativeLayout
             android:layout_width="match_parent"
@@ -21,7 +21,7 @@
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbarAdd"
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:titleTextColor="@color/colorPrimary"/>
