--- a/app/src/main/res/layout/activity_site.xml
+++ b/app/src/main/res/layout/activity_site.xml
@@ -6,65 +6,65 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="org.wit.archaeologicalfieldwork.activities.SiteActivity">
-
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <android.support.design.widget.AppBarLayout
-                android:id="@+id/appBarLayout"
+    <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:fitsSystemWindows="true"
+            app:elevation="0dip"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbarAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:fitsSystemWindows="true"
-                app:elevation="0dip"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                app:titleTextColor="@color/colorPrimary"/>
+    </android.support.design.widget.AppBarLayout>
 
-            <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:titleTextColor="@color/colorPrimary"/>
-        </android.support.design.widget.AppBarLayout>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/appBarLayout"
+            android:fillViewport="true">
 
-        <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/appBarLayout"
-                android:fillViewport="true">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+    <android.support.design.widget.TextInputEditText
+            android:id="@+id/placemarkTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:hint="@string/hint_SiteName"
+            android:inputType="text"
+            android:maxLength="25"
+            android:maxLines="1"
+            android:padding="8dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="14sp"/>
 
-                <android.support.design.widget.TextInputEditText
-                        android:id="@+id/siteName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:hint="@string/hint_SiteName"
-                        android:inputType="text"
-                        android:maxLength="25"
-                        android:maxLines="1"
-                        android:padding="8dp"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="14sp"/>
+    <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@color/colorAccent"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:stateListAnimator="@null"
+            android:text="@string/button_createSite"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"/>
 
-                <Button
-                        android:id="@+id/btnAdd"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
-                        android:background="@color/colorAccent"
-                        android:paddingBottom="8dp"
-                        android:paddingTop="8dp"
-                        android:stateListAnimator="@null"
-                        android:text="@string/button_createSite"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"/>
-            </LinearLayout>
-        </ScrollView>
-
+    </LinearLayout>
+    </ScrollView>
     </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
