--- a/app/src/main/res/layout/activity_site.xml
+++ b/app/src/main/res/layout/activity_site.xml
@@ -38,7 +38,7 @@
             android:orientation="vertical">
 
     <android.support.design.widget.TextInputEditText
-            android:id="@+id/placemarkTitle"
+            android:id="@+id/siteName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -50,6 +50,19 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"/>
 
+        <android.support.design.widget.TextInputEditText
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:hint="@string/hint_siteDescription"
+                android:inputType="text"
+                android:maxLength="25"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="14sp"/>
+
     <Button
             android:id="@+id/btnAdd"
             android:layout_width="match_parent"
@@ -59,7 +72,7 @@
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:stateListAnimator="@null"
-            android:text="@string/button_createSite"
+            android:text="@string/save_Site"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"/>
 
