--- a/app/src/main/res/layout/card_site.xml
+++ b/app/src/main/res/layout/card_site.xml
@@ -20,8 +20,7 @@
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:textSize="30sp"/>
+                android:layout_below="@id/siteName"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
