--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,38 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.LoginActivity">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:background="?android:attr/colorControlActivated">
 
-    <LinearLayout
+
+    <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-        <EditText
-                  android:id="@+id/usereamil_et"
-                  android:layout_width="match_parent"
-                  android:hint="UserEmail"
-                  android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:fitsSystemWindows="true"
+            app:elevation="0dip"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <EditText
-                android:id="@+id/password_et"
-                  android:layout_width="match_parent"
-                  android:hint="Password"
-                  android:inputType="textPassword"
-                  android:layout_height="wrap_content"/>
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbarAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:titleTextColor="@color/colorPrimary"/>
+    </android.support.design.widget.AppBarLayout>
 
-        <Button
-                android:id="@+id/login_btn"
-                android:layout_width="wrap_content"
-                android:text="Login"
-                android:textAllCaps="false"
-                android:layout_gravity="center"
-                android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:padding="10dp"
+            android:id="@+id/email_edittext_login"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="96dp"
+            app:layout_constraintTop_toTopOf="parent" android:background="@color/colorPrimary" android:hint="E-Mail"
+            app:layout_constraintHorizontal_bias="0.0"/>
+    <EditText
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:padding="10dp"
+            android:id="@+id/password_edittext_login" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext_login" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary" android:hint="Password"
+            app:layout_constraintHorizontal_bias="0.0"/>
+    <Button
+            android:text="LogIn"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:id="@+id/login_button_login" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/password_edittext_login" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="1.0"/>
+    <TextView
+            android:text="Back to registration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:id="@+id/back_to_register_textview" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/login_button_login" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textColor="@color/colorPrimary"/>
+</android.support.constraint.ConstraintLayout>
