--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="?android:attr/colorControlActivated">
-
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" android:background="@android:color/holo_green_dark">
 
     <android.support.design.widget.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:background="@android:color/holo_green_dark"
             android:fitsSystemWindows="true"
             app:elevation="0dip"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -21,44 +20,43 @@
                 android:layout_height="wrap_content"
                 app:titleTextColor="@color/colorPrimary"/>
     </android.support.design.widget.AppBarLayout>
-
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:padding="10dp"
             android:id="@+id/email_edittext_login"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="96dp"
-            app:layout_constraintTop_toTopOf="parent" android:background="@color/colorPrimary" android:hint="E-Mail"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            android:background="@color/colorPrimary" android:hint="E-Mail" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
-            android:padding="10dp"
-            android:id="@+id/password_edittext_login" android:layout_marginTop="16dp"
+            android:id="@+id/password_edittext_login"
+            android:background="@color/colorPrimary" android:hint="Password" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/email_edittext_login" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary" android:hint="Password"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
     <Button
-            android:text="LogIn"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:id="@+id/login_button_login" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/password_edittext_login" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="1.0"/>
-    <TextView
-            android:text="Back to registration"
+            android:text="Login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:id="@+id/back_to_register_textview" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/login_button_login" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textColor="@color/colorPrimary"/>
+            android:id="@+id/login_button_login" android:textStyle="bold"
+            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:text="Back to register"
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
+            android:id="@+id/back_to_register_text_view_login"
+            android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/login_button_login" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+
 </android.support.constraint.ConstraintLayout>
