--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.RegisterActivity" android:background="?android:attr/colorControlActivated"
-        tools:layout_editor_absoluteY="25dp">
+        android:background="@android:color/holo_green_dark">
 
     <android.support.design.widget.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -20,60 +19,53 @@
                 android:id="@+id/toolbarAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:titleTextColor="@color/colorPrimary"/>
+                app:titleTextColor="@color/colorPrimary" android:background="@android:color/holo_green_dark"/>
     </android.support.design.widget.AppBarLayout>
-
-
-
-    <TextView
-            android:text="Already have an account"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/already_have_an_account_text_view"
-            android:layout_marginTop="8dp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/register_button_register"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textColor="@color/colorPrimary"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPersonName"
             android:ems="10"
-            android:padding="10dp"
-            android:id="@+id/password_edittext_register" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="100dp"
-            app:layout_constraintTop_toTopOf="parent" android:background="@color/colorPrimary" android:hint="Username"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            android:id="@+id/username_edittext_register" android:textColor="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary" android:hint="Username" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:padding="10dp"
-            android:id="@+id/email_edittext_register"
-            android:background="@color/colorPrimary" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" android:layout_marginStart="8dp"
+            android:id="@+id/email_edittext_register" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:hint="E-Mail"/>
+            app:layout_constraintEnd_toEndOf="parent" android:hint="E-Mail" android:background="@color/colorPrimary"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
-            android:padding="10dp"
-            android:id="@+id/editText15"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary" android:hint="Password"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"/>
+            android:id="@+id/password_edittext_register" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="11dp"
+            app:layout_constraintEnd_toEndOf="parent" android:hint="Password" android:background="@color/colorPrimary"/>
     <Button
             android:text="Register"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/register_button_register" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText15" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+    <TextView
+            android:text="Already have an account"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:id="@+id/already_have_account_text_view_register"
+            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/register_button_register"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textColor="@color/colorPrimary" android:textStyle="bold"/>
+
+
 </android.support.constraint.ConstraintLayout>
