--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,9 +26,14 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/email_edittext_login"
-            android:background="@color/colorPrimary" android:hint="E-Mail" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_edittext_register_login"
+            android:hint="E-Mail"
+            android:paddingLeft="15dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
     <EditText
             android:layout_width="0dp"
@@ -36,26 +41,39 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password_edittext_login"
-            android:background="@color/colorPrimary" android:hint="Password" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/email_edittext_login" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_edittext_register_login"
+            android:hint="Password"
+            android:paddingLeft="15dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext_login"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="Login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/login_button_login" android:textStyle="bold"
-            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/login_button_login"
+            android:textStyle="bold"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:text="Back to register"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             android:id="@+id/back_to_register_text_view_login"
-            android:textStyle="bold" android:textColor="@color/colorPrimary" android:layout_marginTop="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/login_button_login" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/login_button_login"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 
 
