--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,39 +24,43 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/username_edittext_register" android:textColor="@color/colorPrimaryDark"
-            android:background="@color/colorPrimary" android:hint="Username" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/email_edittext_register" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:hint="E-Mail" android:background="@color/colorPrimary"/>
+            android:id="@+id/email_edittext_register"
+            android:paddingLeft="15dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="E-Mail"
+            android:background="@drawable/rounded_edittext_register_login" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/password_edittext_register" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="11dp"
-            app:layout_constraintEnd_toEndOf="parent" android:hint="Password" android:background="@color/colorPrimary"/>
+            android:id="@+id/password_edittext_register"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="11dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="Password"
+            android:background="@drawable/rounded_edittext_register_login" />
     <Button
             android:text="Register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/register_button_register" android:layout_marginTop="8dp"
+            android:id="@+id/register_button_register"
+            android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"/>
     <TextView
             android:text="Already have an account"
             android:layout_width="wrap_content"
