--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,5 +8,15 @@
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/menu_addSite"
         app:showAsAction="always"/>
+    <item
+            android:id="@+id/action_logout"
+            android:icon="@drawable/logout_icon"
+            android:title="@string/menu_logout"
+            app:showAsAction="never"/>
+    <item android:id="@+id/action_settings"
+          android:title="@string/action_settings"
+          app:showAsAction="never"/>
+
+
 
 </menu>
