--- a/app/src/main/res/layout/activity_site.xml
+++ b/app/src/main/res/layout/activity_site.xml
@@ -91,6 +91,18 @@
                     android:text="@string/save_Site"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"/>
+            <Button
+                    android:id="@+id/siteLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@android:color/holo_orange_dark"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:stateListAnimator="@null"
+                    android:text="@string/button_location"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"/>
 
         </LinearLayout>
     </ScrollView>
