--- a/app/src/main/res/layout/activity_site_list.xml
+++ b/app/src/main/res/layout/activity_site_list.xml
@@ -30,7 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:background="@color/colorPrimary"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
