--- a/app/src/main/res/layout/content_site_maps.xml
+++ b/app/src/main/res/layout/content_site_maps.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_site_maps"
-        tools:context=".activities.SiteMapsActivity">
+        tools:context=".views.map.SiteMapView">
 
     <android.support.v7.widget.CardView
             android:id="@+id/cardView"
@@ -66,7 +66,7 @@
     <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="356dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -74,5 +74,5 @@
             app:layout_constraintBottom_toTopOf="@+id/cardView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
