--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#4c90af</color>
+
+    <color name="pageIndecatorActive">#4c90af</color>
+    <color name="pageIndecatorInactive">#000000</color>
+
 </resources>
