--- a/app/src/main/res/layout/activity_site.xml
+++ b/app/src/main/res/layout/activity_site.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +9,7 @@
 
 
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,100 +18,172 @@
             app:elevation="0dip"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.Toolbar
-                android:id="@+id/activity_site_toolbar"
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:titleTextColor="@color/colorPrimary"
                 android:background="@android:color/holo_green_dark"/>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="600dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="703dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="56dp">
+
+        <EditText
+                android:id="@+id/siteName"
+                android:layout_width="239dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/hint_SiteName"
+                android:inputType="text"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
+        <EditText
+                android:id="@+id/description"
+                android:layout_width="239dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/hint_siteDescription"
+                android:inputType="textPersonName"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/siteName" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
+        <Button
+                android:id="@+id/addImage"
+                android:layout_width="352dp"
+                android:layout_height="wrap_content"
+                android:text="@string/button_addImage"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="200dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+                android:id="@+id/siteLocation"
+                android:layout_width="352dp"
+                android:layout_height="wrap_content"
+                android:text="@string/button_location"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginTop="120dp"
+                app:layout_constraintTop_toBottomOf="@+id/addImage" app:layout_constraintHorizontal_bias="0.0"/>
+
+        <com.google.android.gms.maps.MapView
+                android:id="@+id/mapView" android:layout_width="336dp"
+                android:layout_height="114dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/siteLocation"
+                app:layout_constraintVertical_bias="0.0"/>
 
-            <EditText
-                    android:id="@+id/siteName"
-                    android:layout_width="365dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="64dp"
-                    android:ems="10"
-                    android:hint="@string/hint_SiteName"
-                    android:inputType="text"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.503"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            <EditText
-                    android:id="@+id/description"
-                    android:layout_width="365dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:ems="10"
-                    android:hint="@string/hint_siteDescription"
-                    android:inputType="textPersonName"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/siteName" />
-            <Button
-                    android:id="@+id/addImage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:text="@string/button_addImage"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/description" />
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lat:"
+                android:layout_marginStart="9dp"
+                app:layout_constraintStart_toEndOf="@+id/siteName" app:layout_constraintEnd_toStartOf="@+id/lat"
+                android:layout_marginEnd="14dp" android:layout_marginTop="25dp"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-            <ImageView
-                    android:id="@+id/siteImage"
-                    android:layout_width="355dp"
-                    android:layout_height="139dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.333"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/addImage"
-                    app:srcCompat="@drawable/ic_launcher_background"/>
-            <Button
-                    android:id="@+id/siteLocation"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:text="@string/button_location"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/siteImage" />
+        <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lng:"
+                android:layout_marginStart="2dp"
+                app:layout_constraintStart_toEndOf="@+id/description" app:layout_constraintEnd_toStartOf="@+id/lng"
+                android:layout_marginEnd="10dp" android:layout_marginTop="70dp"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-            <com.google.android.gms.maps.MapView
-                    android:id="@+id/mapView" android:layout_width="0dp"
-                    android:layout_height="163dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/siteLocation"
-                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
+        <TextView
+                android:id="@+id/lat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00.000000"
+                android:layout_marginEnd="7dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="14dp"
+                app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginTop="23dp"
+                app:layout_constraintTop_toTopOf="parent"/>
 
+        <TextView
+                android:id="@+id/lng"
+                android:layout_width="wrap_content"
+                android:layout_height="17dp"
+                android:text="00.000000"
+                android:layout_marginStart="18dp"
+                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="7dp" android:layout_marginTop="28dp"
+                app:layout_constraintTop_toBottomOf="@+id/lat"/>
+        <CheckBox
+                android:text="Visited"
+                android:layout_width="97dp"
+                android:layout_height="27dp"
+                android:id="@+id/checkBox_siteVisited"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/visitedDate" android:layout_marginTop="170dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"/>
+        <TextView
+                android:text="Date:"
+                android:layout_width="98dp"
+                android:layout_height="18dp"
+                android:id="@+id/visitedDate"
+                android:layout_marginTop="180dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/checkBox_siteVisited"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button_date_visited_button"
+                android:layout_marginEnd="9dp"/>
+        <Button
+                android:text="Date Visisted"
+                android:layout_width="wrap_content"
+                android:layout_height="49dp"
+                android:id="@+id/button_date_visited_button"
+                tools:ignore="MissingConstraints"
+                android:onClick="showDatePickerDialog"
+                app:layout_constraintStart_toEndOf="@+id/visitedDate"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginTop="152dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+        <EditText
+                android:layout_width="242dp"
+                android:layout_height="40dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/additionalNotes" android:hint="Additional Notes"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/description" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/imageRecyclerView"
+                android:layout_width="352dp"
+                android:layout_height="123dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/addImage"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:scrollbars="vertical"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/siteLocation"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
 
-        </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
