--- a/app/src/main/res/layout/card_site.xml
+++ b/app/src/main/res/layout/card_site.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:elevation="24dp">
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="150dp"
+            android:padding="16dp" android:layout_width="match_parent">
         <ImageView
                 android:id="@+id/imageIcon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="65dp"
+                android:layout_height="67dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginRight="16dp"/>
+                android:layout_marginRight="16dp" android:layout_marginLeft="193dp" android:layout_marginTop="1dp"/>
         <TextView
                 android:id="@+id/siteName"
                 android:layout_width="wrap_content"
@@ -28,6 +27,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/siteName"/>
+        <CheckBox
+                android:text="Visited"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_alignParentStart="true"
+                android:layout_marginStart="100dp" android:layout_alignParentTop="true"
+                android:id="@+id/checkBox_card_site"
+                android:layout_marginTop="30dp"/>
+        <TextView
+                android:text="Lat: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5"
+                android:layout_alignParentStart="true" android:layout_marginStart="138dp"
+                android:layout_below="@+id/imageIcon" android:layout_marginTop="1dp"/>
+        <TextView
+                android:text="Lng:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_alignEnd="@+id/textView5"
+                android:layout_alignParentBottom="true" android:id="@+id/textView6" android:layout_marginBottom="6dp"
+                android:layout_marginEnd="2dp" android:layout_marginTop="7dp" android:layout_below="@+id/textView5"/>
+        <TextView
+                android:text="0.000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_alignTop="@+id/textView5"
+                android:id="@+id/lat_textview_card_site" android:layout_toEndOf="@+id/textView5"
+                android:layout_marginStart="28dp"/>
+        <TextView
+                android:text="0.000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_alignBottom="@+id/textView6"
+                android:id="@+id/lng_textview_card_site" android:layout_toEndOf="@+id/textView6"
+                android:layout_marginStart="30dp"/>
 
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
