--- a/app/src/main/res/layout/activity_site.xml
+++ b/app/src/main/res/layout/activity_site.xml
@@ -35,12 +35,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="56dp">
+            android:layout_marginTop="48dp">
 
         <EditText
                 android:id="@+id/siteName"
                 android:layout_width="239dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:ems="10"
                 android:hint="@string/hint_SiteName"
                 android:inputType="text"
@@ -50,37 +50,37 @@
         <EditText
                 android:id="@+id/description"
                 android:layout_width="239dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:ems="10"
                 android:hint="@string/hint_siteDescription"
                 android:inputType="textPersonName"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="3dp"
                 app:layout_constraintTop_toBottomOf="@+id/siteName" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"/>
         <Button
                 android:id="@+id/addImage"
-                android:layout_width="352dp"
+                android:layout_width="357dp"
                 android:layout_height="wrap_content"
                 android:text="@string/button_addImage"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="200dp"
+                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="220dp"
                 app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
                 android:id="@+id/siteLocation"
                 android:layout_width="352dp"
-                android:layout_height="wrap_content"
+                android:layout_height="38dp"
                 android:text="@string/button_location"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="120dp"
+                android:layout_marginStart="8dp" android:layout_marginTop="144dp"
                 app:layout_constraintTop_toBottomOf="@+id/addImage" app:layout_constraintHorizontal_bias="0.0"/>
 
         <com.google.android.gms.maps.MapView
                 android:id="@+id/mapView" android:layout_width="336dp"
-                android:layout_height="114dp"
+                android:layout_height="88dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="8dp"
@@ -136,19 +136,19 @@
                 android:layout_height="27dp"
                 android:id="@+id/checkBox_siteVisited"
                 tools:ignore="MissingConstraints"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-                app:layout_constraintBottom_toBottomOf="@+id/visitedDate" android:layout_marginTop="170dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/visitedDate" android:layout_marginTop="140dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"/>
         <TextView
                 android:text="Date:"
-                android:layout_width="98dp"
-                android:layout_height="18dp"
+                android:layout_width="105dp"
+                android:layout_height="20dp"
                 android:id="@+id/visitedDate"
-                android:layout_marginTop="180dp"
+                android:layout_marginTop="144dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/checkBox_siteVisited"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button_date_visited_button"
-                android:layout_marginEnd="9dp"/>
+                android:layout_marginStart="1dp" app:layout_constraintEnd_toStartOf="@+id/button_date_visited_button"
+                android:layout_marginEnd="9dp" app:layout_constraintHorizontal_chainStyle="spread_inside"/>
         <Button
                 android:text="Date Visisted"
                 android:layout_width="wrap_content"
@@ -156,13 +156,35 @@
                 android:id="@+id/button_date_visited_button"
                 tools:ignore="MissingConstraints"
                 android:onClick="showDatePickerDialog"
-                app:layout_constraintStart_toEndOf="@+id/visitedDate"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginTop="152dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginTop="100dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="236dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+                android:layout_width="72dp"
+                android:layout_height="0dp"
+                android:inputType="textPersonName"
+                android:text="Rating"
+                android:ems="10"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/ratingBar"/>
+
+        <RatingBar
+                android:layout_width="246dp"
+                android:layout_height="45dp"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/ratingBar"
+                android:numStars="5" android:stepSize="1" android:rating="0"
+                android:layout_centerVertical="true" android:layout_centerHorizontal="true"
+                android:layout_marginTop="170dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="28dp"/>
         <EditText
-                android:layout_width="242dp"
-                android:layout_height="40dp"
+                android:layout_width="186dp"
+                android:layout_height="41dp"
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/additionalNotes" android:hint="Additional Notes"
@@ -173,7 +195,7 @@
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/imageRecyclerView"
                 android:layout_width="352dp"
-                android:layout_height="123dp" android:layout_marginTop="8dp"
+                android:layout_height="143dp" android:layout_marginTop="1dp"
                 app:layout_constraintTop_toBottomOf="@+id/addImage"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:scrollbars="vertical"
@@ -182,7 +204,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.0"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
